--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/RIXIN101/bitrix24BOT#readme",
   "dependencies": {
     "config": "^3.3.6",
+    "cyrillic-to-translit-js": "^3.1.0",
     "express": "^4.17.1",
     "http-build-query": "^0.7.0",
     "node-robokassa": "^0.0.0",
